# My-python-project

.github/workflows/: test-and-coverage.yml
Projet/: README.md  pyproject.toml  requirements.txt
Projet/tests/: test_my_module.py
my_project/site/: 404.html  index.html
my_project/site/module/: index.html
my_project/site/search/: search_index.json
my_project/site/test/: index.html
