[my project]
name = "my-python-project"
version = "0.1.0"
description = "A simple arithmetic operations module"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"

dependencies = [
    "pytest>=6.0"  # Add pytest to the dependencies list for testing
]

# Optional: Define the build system (you can use setuptools)
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
